--- a/game/detail.html
+++ b/game/detail.html
@@ -1,1 +1,24 @@
-<!-- 質問の詳細と選択肢を表示し、投票フォームを提供するテンプレート -->
+<!-- game/templates/game/detail.html -->
+
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+    <meta charset="UTF-8">
+    <title>多数派ゲーム - 質問詳細</title>
+</head>
+<body>
+    <h1>{{ question.question_text }}</h1>
+    {% if error_message %}
+        <p><strong>{{ error_message }}</strong></p>
+    {% endif %}
+    <form action="{% url 'game:vote' question.id %}" method="post">
+        {% csrf_token %}
+        {% for choice in question.choice_set.all %}
+            <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}">
+            <label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label><br>
+        {% endfor %}
+        <br>
+        <input type="submit" value="投票する">
+    </form>
+</body>
+</html>
