--- a/game/index.html
+++ b/game/index.html
@@ -1,1 +1,21 @@
-<!-- 質問の一覧を表示するためのテンプレート -->
+<!-- game/templates/game/index.html -->
+
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+    <meta charset="UTF-8">
+    <title>多数派ゲーム - 質問一覧</title>
+</head>
+<body>
+    <h1>質問一覧</h1>
+    {% if latest_question_list %}
+        <ul>
+            {% for question in latest_question_list %}
+                <li><a href="{% url 'game:detail' question.id %}">{{ question.question_text }}</a></li>
+            {% endfor %}
+        </ul>
+    {% else %}
+        <p>現在質問はありません。</p>
+    {% endif %}
+</body>
+</html>
